Delete redundant linker option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/coverage)
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/coverage/report)
 
 add_compile_options(-Wall -Werror -Wconversion --coverage -fdiagnostics-color=always)
-add_link_options(-lgcov --coverage)
+add_link_options(--coverage)
 
 add_executable(Test_Exec test/test.cpp test/unity/unity.c)
 
